--- a/assets/css/productoversee.css
+++ b/assets/css/productoversee.css
@@ -1,5 +1,6 @@
 @import url("default.css");
 @import url("typo.css");
+@import url("footer.css");
 @import url("header.css");
 @import url("home.css");
 @import url("single.css");
