changing text at home

--- a/home.hbs
+++ b/home.hbs
@@ -131,7 +131,7 @@
           {{^if @member.paid}}
           <div class="gh-signup">
             {{^if @member}}
-            <p class="gh-signup-description">Apoio nosso projeto e tenha acesso à conteúdo para assinantes.</p>
+            <p class="gh-signup-description">Apoie nosso projeto e tenha acesso à conteúdo para assinantes.</p>
 
             <a class="gh-subscribe-input" href="#/portal/signup" data-portal="signup">
               <div class="gh-subscribe-input-text">
