--- a/default.hbs
+++ b/default.hbs
@@ -32,7 +32,7 @@
           {{^if @member}}
           <h3 class="gh-subscribe-title">Inscreva-se {{@site.title}}</h3>
 
-          <div class="gh-subscribe-description">Não os posts exclusivos da nossa Newsletter.</div>
+          <div class="gh-subscribe-description">Textos todas às quartas 7h45 na sua caixa de entrada.</div>
 
           <a class="gh-subscribe-input" href="#/portal/signup" data-portal="signup">
             <div class="gh-subscribe-input-text">
