changing text at home

--- a/default.hbs
+++ b/default.hbs
@@ -44,9 +44,9 @@
           {{else}}
           <h3 class="gh-subscribe-title">Quer acesso ilimitado?</h3>
 
-          <div class="gh-subscribe-description">Upgrade to a paid account to get full access.</div>
+          <div class="gh-subscribe-description">Ajude a manter o projeto! Faça um upgrade da sua conta.</div>
 
-          <a class="gh-subscribe-btn gh-btn gh-primary-btn" href="#/portal/account/plans" data-portal="account/plans">Upgrade now</a>
+          <a class="gh-subscribe-btn gh-btn gh-primary-btn" href="#/portal/account/plans" data-portal="account/plans">Inscreva-se</a>
           {{/if}}
         </section>
       </div>
