--- a/default.hbs
+++ b/default.hbs
@@ -46,7 +46,7 @@
 
           <div class="gh-subscribe-description">Ajude a manter o projeto! Faça um upgrade da sua conta.</div>
 
-          <a class="gh-subscribe-btn gh-btn gh-primary-btn" href="#/portal/account/plans" data-portal="account/plans">Inscreva-se</a>
+          <a class="gh-subscribe-btn gh-btn gh-primary-btn" href="#/portal/account/plans" data-portal="account/plans">Inscreva-se agora</a>
           {{/if}}
         </section>
       </div>
