--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -25,7 +25,9 @@
 .gh-main {
 	padding: 10rem 0 !important;
 }
-
+html {
+  font-size: 60%;
+}
 body {
   text-rendering: optimizespeed;
 	font: 1rem var(--fontDefault);
