--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -2,16 +2,7 @@
   border-top: 5px solid var(--colorRed);
 }
 .po-burger {
-  background:  url(../images/burger.png) no-repeat center;
-  background-size: contain;
-  display: block;
-  width: 20px;
-  height: 20px;
-  position: absolute;
-  top: 50%;
-  left: 20px;
-  margin-top: -10px;
-  font-weight: 100;
+  display: none;
 }
 .po-close-menu {display: none;}
 #po-head > .po-head-inner {
