--- a/default.hbs
+++ b/default.hbs
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{{meta_title}}</title>
+  <title>{{meta_title}} - {{meta_description}}</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;600&family=Roboto&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="{{asset "css/screen.css"}}">
+  <link rel="stylesheet" href="{{asset "css/productoversee.css"}}&{{date format="SS"}}">
 
   {{ghost_head}}
 </head>
