--- a/partials/productoversee_partials/po_sidebar.hbs
+++ b/partials/productoversee_partials/po_sidebar.hbs
@@ -1,5 +1,4 @@
-  <aside class="po-article-sidebar">
-  {{#is "post"}}
+  <aside class="po-article-sidebar">{{#is "post"}}
     <!-- {{#primary_author}}
     <figure class="gh-author-image">
       {{#if profile_image}}
@@ -44,8 +43,7 @@
       </div>
     </div>
 
-  {{/is}}
-  </aside>
+  {{/is}}</aside>
 
 {{#if @custom.switch_banners_by_hour}} 
 <script type="text/javascript">
