--- a/partials/content-cta.hbs
+++ b/partials/content-cta.hbs
@@ -10,7 +10,7 @@
         <h4 class="gh-cta-title">Este post é apenas para inscritos.</h4>
     {{/has}}
     {{#has visibility="filter"}}
-        <h4 class="gh-cta-title">This post is for subscribers on the {{products}} only.</h4>
+        <h4 class="gh-cta-title">Este é um post para os assinantes de {{products}}.</h4>
     {{/has}}
 
     <div class="gh-cta-actions">
