--- a/partials/productoversee_partials/header.hbs
+++ b/partials/productoversee_partials/header.hbs
@@ -43,7 +43,7 @@
         ou 
         <a href="#/portal/signin" data-portal="signin">Entrar</a>
         {{else}}
-        <a class="po-btn" href="#/portal/account" data-portal="account">Conta</a>
+        <a class="po-btn" href="#/portal/account" data-portal="account">Conta</a> ou <a href="javascript:" data-members-signout>Sair</a>
         {{/unless}} 
       </div>
     </div>
