--- a/home.hbs
+++ b/home.hbs
@@ -55,17 +55,18 @@
     <section class="po-highlights">
       <h2 class="po-section-title">Selecionados</h2>
       <ul>
-      {{#get "posts" limit="4" include="authors" featured="true" as |featured|}}
+
+        {{#get "posts" include="tags,author" filter="featured:true" limit="4" as |featured|}}
         {{#foreach featured}}
-         <li>
-            <a href="{{url}}" alt="{{meta_description}}">
+        <li>
+          <a href="{{url}}" alt="{{meta_description}}">
             <img src="{{feature_image}}" alt="{{feature_image_alt}}">
             <h3>{{title}}</h3>
-            </a>
-            <span class="po-author-name">{{authors separator=" &bull; "}}</span>
-         </li>
+          </a>
+          <span class="po-author-name">{{authors separator=" &bull; "}}</span>
+        </li>
         {{/foreach}}
-       {{/get}}
+        {{/get}}
       </ul>
     </section>
 
