--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -40,13 +40,13 @@
 }
 
 .po-home-highlight .po-featured-home h1 {
-	font: 600 3rem/1.2 var(--fontDefault);
+	font: 600 3rem/1.2 var(--fontMono);
 	padding: 20px 0;
 }
 
 .po-home-highlight .po-featured-home p {
 	padding:  0 20px;
-	font-size: 1.4rem;
+	font: 2rem/1.2 var(--fontSansSerif);
 }
 
 
@@ -73,7 +73,8 @@
 }
 
 .po-home-highlight .po-past-posts h2 {
-	font: 400 1.5rem var(--fontDefault);
+	font: 400 1.7rem/1.5 var(--fontDefault);
+	padding: 10px 0 0;
 }
 .po-home-highlight .po-past-posts .po-author-name {padding: 10px 0; display: block;}
 
@@ -96,15 +97,44 @@
 }
 
 .po-home-highlight .po-latest-posts h3 {
-	font: 1.3rem var(--fontDefault);
+	font: 1.6rem/1.5 var(--fontMono);
 	padding-right: 10px;
 	padding-bottom: 10px;
 	overflow: hidden;
 }
 
-
-
 .po-home-highlight li a:hover .po-home-sponsor {opacity: 1 !important;}
+
+
+/***
+ * Highlights Featured Posts
+***/
+.po-highlights {
+  padding: 0 0 100px;
+}
+
+.po-highlights h3 {
+  font: 1.6rem/1.5 var(--fontMono);
+  padding: 10px 0;
+}
+
+.po-highlights ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  list-style: none;
+}
+
+.po-highlights li {
+  flex: 1;
+  padding: 0 10px;
+}
+
+.po-highlights li:first-child {padding-left: 0;}
+.po-highlights li:last-child {padding-right: 0;}
+.po-highlights li a:hover * {color: var(--colorRed) !important;}
+
 
 .po-home-sponsor {
 	display: block;
@@ -118,6 +148,7 @@
 .po-home-highlight .po-latest-posts .po-home-sponsor {
 	left: 5px;
 }
+
 
 
 a:not(.kg-btn):not(.kg-product-card-button):hover {
