--- a/default.hbs
+++ b/default.hbs
@@ -7,7 +7,7 @@
   <title>{{meta_title}} - {{meta_description}}</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;600&family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@100;400;700;800;900&DM+Mono:wght@300;400;500&Work+Sans:wght@300;400;600&family=Roboto&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="{{asset "css/screen.css"}}">
   <link rel="stylesheet" href="{{asset "css/productoversee.css"}}&{{date format="SS"}}">
