--- a/default.hbs
+++ b/default.hbs
@@ -11,7 +11,8 @@
 
   <link rel="stylesheet" href="{{asset "css/screen.css"}}">
   <link rel="stylesheet" href="{{asset "css/productoversee.css"}}&{{date format="SS"}}">
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8115861735629092"
+     crossorigin="anonymous"></script>
   {{ghost_head}}
 </head>
 
