config de banner no sidebar

--- a/partials/productoversee_partials/po_sidebar.hbs
+++ b/partials/productoversee_partials/po_sidebar.hbs
@@ -34,13 +34,24 @@
         </ul>
       </nav>
 
+      {{#if @custom.sidebar_banner}} 
       <div class="po-sidebar-banner">
+      
+      <!-- /7969368/po-banner-sidebar -->
+      <div id='div-gpt-ad-1651103905668-0' style='min-width: 300px; min-height: 250px;'>
+        <script>
+          googletag.cmd.push(function() { googletag.display('div-gpt-ad-1651103905668-0'); });
+        </script>
+      </div>
+
+<!--         <a href="https://www.ituring.com.br/analise-de-dados-para-negocios/?utm_source=productoversee&utm_medium=comunidade&utm_campaign=adpn?utm_source=ProductOversee&utm_medium=sidebarLogo_ProductOversee&utm_campaign=parceria_ProductOversee" class="po-banner po-banner-first"><img src="{{asset "/images/sponsor/ituring-banner.png"}}"></a>
         
-        <a href="https://www.ituring.com.br/analise-de-dados-para-negocios/?utm_source=productoversee&utm_medium=comunidade&utm_campaign=adpn?utm_source=ProductOversee&utm_medium=sidebarLogo_ProductOversee&utm_campaign=parceria_ProductOversee" class="po-banner po-banner-first"><img src="{{asset "/images/sponsor/ituring-banner.png"}}"></a>
-        
-        <a href="https://www.somostera.com/?utm_source=productoversee&utm_medium=portal&utm_campaign=productoversee?utm_source=ProductOversee&utm_medium=sidebarLogo_ProductOversee&utm_campaign=parceria_ProductOversee" class="po-banner po-banner-second"><img src="{{asset "/images/sponsor/tera-banner.jpg"}}"></a>
+        <a href="https://www.somostera.com/?utm_source=productoversee&utm_medium=portal&utm_campaign=productoversee?utm_source=ProductOversee&utm_medium=sidebarLogo_ProductOversee&utm_campaign=parceria_ProductOversee" class="po-banner po-banner-second"><img src="{{asset "/images/sponsor/tera-banner.jpg"}}"></a> -->
 
       </div>
+      {{/if}}
+
+
     </div>
 
   {{/is}}</aside>
