quebra de linha do link de website do author na sidebar

--- a/author.hbs
+++ b/author.hbs
@@ -20,7 +20,7 @@
         <span class="gh-author-location">📍 {{location}}</span>
         {{/if}}
         {{#if website}}
-        <a class="gh-author-website" href="{{website}}" target="_blank" rel="noopener">{{website}}</a>
+        <a class="po-author-website" href="{{website}}" target="_blank" rel="noopener">{{website}}</a>
         {{/if}}
         <div class="gh-author-social">
           {{#if twitter}}
