--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -15,6 +15,10 @@
 
 .po-article-meta a {text-transform: uppercase;}
 
+.po-author-website {
+	overflow-wrap: anywhere;
+  line-height: 1.3;
+}
 
 .po-article-title {
 	font: 800 5rem/1.2 var(--fontMono);
