changing handlebar on single to show more authors

--- a/post.hbs
+++ b/post.hbs
@@ -21,7 +21,7 @@
       <p class="po-article-excerpt">{{custom_excerpt}}</p>
       {{/if}}
         
-        <span class="po-article-author">{{authors separator=", " prefix="Por "}}</span>
+      <span class="po-article-author">{{authors separator=" &bull; " prefix="Por "}}</span>
 
       </div>
       {{#if feature_image}}
