--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -62,6 +62,7 @@
 	margin: 20px 0 10px;
 }
 
+
 blockquote {
 	font-size: 2rem;
 	font-style: italic;
@@ -91,6 +92,8 @@ blockquote {
 	padding: 0;
 }
 
+.po-text .po-author-article-footer a {text-decoration: none;}
+
 .po-author-article-footer p {
 	font-size: 1.5rem;
 	max-width: 500px;
@@ -114,7 +117,7 @@ blockquote {
 .po-text {
 	display: flex;
 }
-
+.po-text a {text-decoration: underline;}
 
 /***
  * Sidebar post
