Correct load more articles on home

--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -1,4 +1,4 @@
-<div class="po-loop-card {{post_class}}">
+<div class="po-loop-card gh-card {{post_class}}">
   
   <a class="po-loop-link" href="{{url}}">
     <header>
