--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -9,7 +9,7 @@
   --fontDefault: "Azeret Mono", "The Future Mono 02", monospace;
   --fontSerif: "Noto Serif Display", "Times New Roman", Times, serif;
   --fontMono: "Azeret Mono", "The Future Mono 02", monospace;
-  --fontSansSerif: Inter, "Open Sans", -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
+  --fontSansSerif: "Roboto Flex", Inter, "Open Sans", -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
   --fontArticle: "Open Sans", arial, helvetica, sans-serif;
   --font-sans: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
 }
