--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -2,8 +2,10 @@
 
 
 .po-article-header .po-limit-container {
-	padding-bottom: 5rem;
-	max-width: 720px;
+  padding-bottom: 5rem;
+  border-bottom: 1px solid #DDD;
+  margin-bottom: 100px;
+  padding: 50px 20px 100px;
 }
 
 .po-article-meta {
@@ -21,15 +23,18 @@
 }
 
 .po-article-title {
-	font: 800 5rem/1.2 var(--fontMono);
-	padding-bottom: 30px;
+	font: 600 4rem/1.2 var(--fontMono);
+	max-width: 800px;
+	padding: 20px 0;
+	text-transform: uppercase;
 }
 
 .po-article-excerpt {
-	font:300  3rem/1.3 var(--fontSansSerif);
+	font:300 2.7rem/1.3 var(--fontSansSerif);
 	padding-bottom: 30px;
 	/*padding: 30px 0;*/
-	max-width: 1000px;
+	max-width: 800px;
+	color: var(--colorGrayMedium);
 }
 
 .po-tags-post-list a { color: var(--colorRed); }
@@ -43,14 +48,14 @@
 }
 
 .po-content {
-	max-width: 700px;
+	max-width: 650px;
 	margin: 0 auto;
 }
 
 .po-content ul,
 .po-content ol,
 .po-content p {
-	font: 1.8rem/1.5 var(--fontSansSerif);
+	font: 1.8rem/1.4 var(--fontSansSerif);
 }
 
 .po-content ul,
