--- a/post.hbs
+++ b/post.hbs
@@ -24,22 +24,24 @@
       <span class="po-article-author">{{authors separator=" &bull; " prefix="Por "}}</span>
 
       </div>
-      {{#if feature_image}}
-      <figure class="gh-article-image">
-        <img
-        srcset="{{img_url feature_image size="s"}} 300w,
-        {{img_url feature_image size="m"}} 720w,
-        {{img_url feature_image size="l"}} 960w,
-        {{img_url feature_image size="xl"}} 1200w,
-        {{img_url feature_image size="xxl"}} 2000w"
-        sizes="(max-width: 1200px) 100vw, 1200px"
-        src="{{img_url feature_image size="xl"}}"
-        alt="{{#if feature_image_alt}}{{feature_image_alt}}{{else}}{{title}}{{/if}}"
-        >
-        {{#if feature_image_caption}}
-        <figcaption>{{feature_image_caption}}</figcaption>
+      {{#if @custom.single_show_featured_img}}
+        {{#if feature_image}}
+        <figure class="gh-article-image">
+          <img
+          srcset="{{img_url feature_image size="s"}} 300w,
+          {{img_url feature_image size="m"}} 720w,
+          {{img_url feature_image size="l"}} 960w,
+          {{img_url feature_image size="xl"}} 1200w,
+          {{img_url feature_image size="xxl"}} 2000w"
+          sizes="(max-width: 1200px) 100vw, 1200px"
+          src="{{img_url feature_image size="xl"}}"
+          alt="{{#if feature_image_alt}}{{feature_image_alt}}{{else}}{{title}}{{/if}}"
+          >
+          {{#if feature_image_caption}}
+          <figcaption>{{feature_image_caption}}</figcaption>
+          {{/if}}
+        </figure>
         {{/if}}
-      </figure>
       {{/if}}
 
     </header>
