--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,5 +1,5 @@
 #po-head {
-  border-top: 5px solid var(--colorRed);
+  border-top: 2px solid var(--colorRed);
 }
 .po-burger {
   display: none;
@@ -24,7 +24,7 @@
 }
 
 .po-head-logo img {
-  max-width:  200px;
+  max-width:  170px;
 }
 .po-head-actions {text-align: right;}
 
@@ -64,7 +64,7 @@
 }
 
 .po-head-menu li a {
-  padding: 1rem 2rem;
+  padding: 2rem;
   display: inline-block;
   font-size: 1.4rem;
 }
