--- a/post.hbs
+++ b/post.hbs
@@ -2,7 +2,7 @@
 
 {{#post}}
 
-  <article class="po-article {{post_class}}">
+  <article class="po-article {{post_class}} {{#if @custom.single_invert_sidebar_article}}po-inverted-sidebar{{/if}}">
     <header class="po-article-header">
       <div class="po-limit-container">
 
