--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -26,7 +26,7 @@
 }
 
 .po-article-title {
-	font: 500 4.5rem/1.2 var(--fontMono);
+	font: 500 4.5rem/1.4 var(--fontMono);
 	max-width: 930px;
 	padding: 30px 0;
 	text-transform: uppercase;
@@ -59,6 +59,10 @@
 .po-content {
 	max-width: 650px;
 	margin: 0 auto;
+}
+
+.po-inverted-sidebar .po-content {
+	margin: 0 auto 0 20px;
 }
 
 .po-content ul,
@@ -136,6 +140,11 @@ blockquote {
 /***
  * Sidebar post
 ***/
+
+.po-inverted-sidebar .po-article-sidebar {
+	order: 1;
+}
+
 .po-article-sidebar:empty{display: none;}
 .po-sidebar-title {
 	font: 600 2.5rem/1.2 var(--fontMono);
